--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,6 +1,23 @@
+@import '../components/variables';
+
 body {
      direction: rtl;
      font-family: iransansx;
+     background-color: var(--bodyBack);
+     color: var(--textColor);
+     font-size: 1em;
+     padding: 2em;
+     @include media($mobile){
+          padding: 1em;  
+     }
+}
+
+input[type=checkbox],
+input[type=radio] {
+     Height: auto !important;
+     position: relative;
+     top: 0.25em;
+     cursor: pointer;
 }
 
 button {
@@ -11,6 +28,20 @@ button {
 a {
      text-decoration: none;
      color: inherit;
+
+     &:not(.normal) {
+          color: var(--textSecondColor);
+          border-bottom: 1px solid var(--textSecondColor);
+          border-radius: 0;
+          padding-bottom: .2em;
+     }
+}
+
+hr {
+     height: 1px;
+     background: var(--hrColor);
+     border: none;
+     margin: 0.9em 0;
 }
 
 * {
@@ -26,10 +57,26 @@ ul {
      ---lightBlack: #4b4b4b;
      ---white: #f5f5f5;
      --lightGray: #00000024;
-
      --size09: 0.9em;
      --white: #fff;
      --blue: #1d71b9;
+     --redColor: #ef4056;
+     --darkRedColor: #9A0057;
+     --grayColor: #F2F2F2;
+     //pooyan
+     //* colors
+     --tableHeadColor: #EAEAEA;
+     --bodyBack: #FAF9FF;
+     --buttonColor: #2086C8;
+     --alertColor: #EE4155;
+     --textColorFade: #989898;
+     --textColor: #727272;
+     --textColorStrong: #383838;
+     --textSecondColor: #1F86C8;
+     --hrColor: rgba(128, 128, 128, 0.1607843137);
+     //* others
+     --borderRadius: 10px;
+     --borderRadiusBig: 15px;
 }
 
 .cont {
@@ -37,7 +84,7 @@ ul {
      margin: 1.5em auto;
 }
 
-.innerPage-addNew {
+.innerPage-add {
      background: var(---white);
      padding: 10px 0;
      padding-bottom: 0;
@@ -45,9 +92,11 @@ ul {
 
 .mainContent-twoParts {
      display: grid;
-     grid-template-columns: 25% 70%;
-     gap: 3em;
-     padding: 2em;
+     grid-template-columns: 22em auto;
+     gap: 2em;
+
+
+
 }
 
 .bg-white {
@@ -58,12 +107,18 @@ ul {
 }
 
 .sidebarContent {
-     padding: 1em;
+     padding: 1.5em 1.4em;
      background-color: var(--white);
-     border-radius: 8px;
-    
-     &:not(:first-child){
-         margin-top: 1em;  
+     border-radius: var(--borderRadiusBig);
+     box-shadow: 1px 1px 12px 1px rgba(0, 0, 0, 0.04);
+
+     &:not(:first-child) {
+          margin-top: 1em;
+     }
+
+     &.narrow {
+          padding: 1em;
+          border-radius: var(--borderRadius);
      }
 }
 
@@ -73,12 +128,11 @@ ul {
      display: flex;
      align-items: center;
 
-
      input,
      button {
           height: 3em;
           line-height: 3em;
-          border-radius: 5px;
+          border-radius: var(--borderRadius);
      }
 
 
@@ -86,25 +140,164 @@ ul {
           font-family: inherit;
           width: 100%;
           padding: 0.5em;
-          background-color: var(---white);
-          padding-right: 5em;
-          border: 1px dashed var(--lightGray);
-
-
+          background-color: var(--tableHeadColor);
+          border: none;
+          font-weight: 600;
+          outline: none;
      }
 
 
 
      button {
-          font-size: 0.8em;
+          left: .5em;
+          font-size: 0.9em;
           position: absolute;
           color: var(--white);
-          background-color: var(--blue);
-          border: 1px dashed var(--blue);
-          margin-right: 0.5em;
-          padding: 0 0.5em;
-          font-weight: 600;
+          background-color: var(--buttonColor);
+          border: none;
+          padding: 0 1.6em;
+          font-weight: 400;
+
      }
+}
+
+.basket-items,
+.grid--items .head-basket-items {
+     border-radius: 8px;
+
+}
+
+.basket-items {
+     color: #818181;
+}
+
+
+.ads-horizontal {
+     width: 100%;
+     height: 8em;
+     background-color: #FEEF20;
+     margin-top: 2em;
+}
+
+.ads-aside {
+     width: 100%;
+     height: 16em;
+     background-color: #FEEF20;
+     margin-bottom: 1em;
+     border-radius: 8px;
+}
+
+.borderRadius-8px {
+
+     border-radius: 8px;
+}
+
+p {
+     text-align: justify;
+}
+
+.p-limit {
+     text-align: justify;
+     letter-spacing: 0.02em;
+     display: -webkit-box;
+     -webkit-line-clamp: 4;
+     -webkit-box-orient: vertical;
+     overflow: hidden;
+     line-height: 2;
+     max-height: 8em;
+}
+
+
+
+img {
+     object-fit: cover;
+     width: 100%;
+}
+
+
+
+
+// ---
+
+// --start/media query
+@include media($screen) {
+     .three-columns-boxe-grid {
+          gap: 2em;
+     }
+
+}
+
+@include media($laptop) {
+     .three-columns-boxe-grid {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 1em;
+     }
+
+}
+
+@include media($mobile) {
+     .three-columns-boxe-grid {
+          grid-template-columns: 1fr;
+          font-size: 0.9em;
+     }
+
+     .card-grid-item {
+          grid-template-columns: repeat(auto-fit, minmax(14em, 1fr));
+     }
+
+}
+
+@media (max-width:598px) and (min-width:480px) {
+     .info--box ul {
+          margin-top: 1em;
+     }
+
+}
+
+// -------start/media query
+@media (min-width:992px) {
+     .mainContent-twoParts {
+          font-size: 0.9em;
+     }
+     
+
+}
+
+@media (max-width:992px) and (min-width:698px) {
+     .mainContent-twoParts {
+          grid-template-columns: auto auto;
+          gap: 1em;
+
+     }
+}
+
+@include media($tablet) {
+     .mainContent-twoParts {
+          grid-template-columns: auto;
+
+          aside {
+               grid-row: 2/3;
+               margin-bottom: 18em;
+
+               .sidebarContent.payment {
+                    position: fixed;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    z-index: 2;
+               }
+          }
+     }
+
+
+}
+
+@media(max-width:480px) {
+
+     .mainContent-twoParts {
+          padding: 0
+     }
+
 }
 
 @import '../components/structural/Fonts';
