--- a/components/_gridItems.scss
+++ b/components/_gridItems.scss
@@ -4,11 +4,11 @@
     place-items: center;
     gap: 1em;
 }
-// ---
+
 .grid--items {
 
     background-color: var(--white);
-    padding: 1em;
+    padding: 1em 1em 0;
     box-shadow: 1px 1px 12px 1px rgb(0 0 0 / 10%);
     border-radius: var(--borderRadius);
 
@@ -19,8 +19,6 @@
          align-items: center;
          padding: 1.5em 2em;
          gap: 0.5em;
-
-
          &.head-grid--items {
               font-weight: 600;
               background-color: var(--tableHeadColor);
@@ -31,26 +29,17 @@
               text-align: center;
          }
     }
-
-
+    
     .body-grid--items {
          font-size: var(--size09);
 
          &:not(:last-of-type) {
               border-bottom: 1px dashed var(--lightGray);
          }
-
-
-
-
          a {
               font-weight: 600;
               display: flex;
          }
-
-
-
-
          .delete {
 
               img {
@@ -59,27 +48,73 @@
               }
          }
     }
+}
+
+.card-grid-item {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(21em, 25em));
+    justify-content: center;
+    gap:  2em ;
+
+    @media (max-width:698px) and (min-width:480px) {
+
+        .card--item-course {
+            width: min-content;
+            margin: auto;
+
+            img {
+                width: auto;
+            }
+        }
+    }
+
+    @include media($mobile) {
+        gap: 1em;
+    }
+}
+
+// --start/media query
+@include media($screen) {
+    .three-columns-boxe-grid {
+        gap: 2em;
+    }
+}
+
+@include media($laptop) {
+    .three-columns-boxe-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1em;
+    }
+
+    .mainContent-twoParts {
+        grid-template-columns: auto;
+
+        aside {
+            grid-row: 2/3;
+        }
+    }
+}
+
+@media (min-width:992px) {
+    .mainContent-twoParts {
+        font-size: 0.9em;
+    }
+}
+
+@media (max-width:598px) and (min-width:480px) {
+    .info--box ul {
+        margin-top: 1em;
+    }
+}
+
+@include media($mobile) {
+    .three-columns-boxe-grid {
+        grid-template-columns: 1fr;
+        font-size: 0.9em;
+    }
+
 
 
 }
-// ---
-.card-grid-item {
-     display: grid;
-     grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
-     gap: 1em;
-     @media (max-width:698px) and (min-width:480px){
- 
-         .card{
-             width: min-content;
-             margin: auto;
-             img{
-                 width: auto;
-             }
-         }
-         
-     }
-     @include media($mobile){
-         gap: 0em ;
-     }
- }
- 
+
+
