--- a/styles/app.scss
+++ b/styles/app.scss
@@ -29,7 +29,7 @@ a {
      text-decoration: none;
      color: inherit;
 
-     &:not(.normal) {
+     &.acceptRules{
           color: var(--textSecondColor);
           border-bottom: 1px solid var(--textSecondColor);
           border-radius: 0;
